--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -10,7 +10,9 @@
 
   <properties>
       <!-- This property will be set by the Maven Dependency plugin -->
-      <annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
+     <annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
 
   <dependencies>
